# ragsc

./: .Rhistory  .clustering.yml.swp  .gitignore  Dockerfile  LICENSE  README.md  ROADMAP.md  ana_embed.py  annotation.ipynb  batch_rag.py  chroma.py  clean.ipynb  cluster.ipynb  clustering.ipynb  clustering.yml  comp_ana.py  conda-env.yml  conda-requirements.txt  deployment.Dockerfile  docker-compose.yml  dockerless.md  embed_group.py  embed_sigs.py  embedit.py  gen_sigs.py  gse.ipynb  main.py  normalization.ipynb  package-lock.json  package.json  preprocess.yml  pyproject.toml  pytest.ini  qctut.ipynb  requirements.txt  runit.sh  shrink.py  storage.ipynb  subset.ipynb  subset.py  (+1 more)
docker/: Dockerfile  Dockerfile.datascience
envs/: chroma.yml  jun.yml  ragsc-batch.yml  ragsc-mac.yml  ragsc-requirements.txt  ragsc.yml  scarches-conda-requirements.txt  scarches-linux.yml
notebooks/: 01qctut.ipynb  02 normalization.ipynb  03 feature.ipynb  04 dimensionality.ipynb  05A annotation.ipynb  05B cluster.ipynb  06 subset.ipynb  07 postembed.ipynb  08 chroma.ipynb  analyze_sigs.ipynb  bm25.ipynb  chroma.ipynb  clean.ipynb  cluster.ipynb  embed.ipynb  fusion.ipynb  postembed.ipynb  storage.ipynb  subset.ipynb  vector.ipynb
src/ragsc/: __main__.py  chroma.py  embed.py  markdown.py  signatures.py  storage.py  utils.py
tests/: test_embeddings.py  test_markdown.py  test_signatures.py
