[tool.poetry]
name = "ragsc"
version = "0.1.0"
description = "Proof of concept use of RAG for cell annotations"
authors = ["David Eidelman <david.eidelman@mcgill.ca>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.29"
psycopg = {extras = ["binary", "pool"], version = "^3.1.18"}
loguru = "^0.7.2"
langchain = "^0.1.16"
langchain-community = "^0.0.34"
langchain-openai = "^0.1.4"
ipykernel = "^6.29.4"
jupyterlab = "^4.1.8"
chromadb = "^0.5.0"
bs4 = "^0.0.2"
markdown = "^3.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.1"
mypy = "^1.10.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
