[project]
name = "ragsc"
version = "0.0.1"
authors = [
  { name="David Eidelman", email="david.eidelman@mcgill.ca" },
]
description = "Package to explore the use of RAGs in single cell RNA seq work"
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"